<resources>
    <string name="app_name">StudentsMVVM</string>

    <string name="no_internet_connection">No Internet Connection.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="already_have_account">Already have account?</string>
    <string name="create_one">Create one</string>
    <string name="login_here">Login Here</string>
    <string name="splash">Splash</string>
    <string name="reload">Reload</string>
    <string name="logout">Logout</string>
    <string name="add_student">Add Student</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="grade">Grade</string>
    <string name="image_url">Image URL</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_student">Delete Student</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_all">Delete All</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="delete_selected_students">Delete Selected Students</string>
</resources>