<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragments.AddStudentBottomSheet">

    <TextView
        android:id="@+id/bottom_sheet_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_student"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_title_textView" />

    <EditText
        android:id="@+id/name_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/background_primary_border"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/name_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name_tv" />

    <TextView
        android:id="@+id/age_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/age"
        app:layout_constraintStart_toStartOf="@+id/name_tv"
        app:layout_constraintTop_toBottomOf="@+id/name_tv" />

    <EditText
        android:id="@+id/age_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/background_primary_border"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/age_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/age_tv" />

    <TextView
        android:id="@+id/grade_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/grade"
        app:layout_constraintStart_toStartOf="@+id/age_tv"
        app:layout_constraintTop_toBottomOf="@+id/age_tv" />

    <EditText
        android:id="@+id/grade_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/background_primary_border"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/grade_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/grade_tv" />

    <TextView
        android:id="@+id/img_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/image_url"
        app:layout_constraintStart_toStartOf="@+id/grade_tv"
        app:layout_constraintTop_toBottomOf="@+id/grade_tv" />

    <EditText
        android:id="@+id/img_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/background_primary_border"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_tv" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/background_primary_color_border"
        android:padding="5dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/add"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_et" />

    <ProgressBar
        android:id="@+id/addProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btn_add"
        app:layout_constraintEnd_toEndOf="@+id/btn_add"
        app:layout_constraintStart_toStartOf="@+id/btn_add"
        app:layout_constraintTop_toTopOf="@+id/btn_add" />


</androidx.constraintlayout.widget.ConstraintLayout>